{
    "name": "Actions",
    "maps": [
        {
            "name": "GameMode",
            "id": "4781fef9-48d8-406d-b1d5-ec3fa148578a",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "0fcbdb7c-a5e5-43bd-a1b8-64c1350d833c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2cf5136a-10e9-458c-b5fe-ff6105e96ce0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Stealth",
                    "type": "PassThrough",
                    "id": "c2522fbf-fa81-4d40-8830-ce62da2c91a6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Assassination",
                    "type": "PassThrough",
                    "id": "8ee9d8c2-bbed-4f61-afaa-2aaaf7418e7d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "79bfc4e4-66bf-4ed1-a9a5-b3d5d9aa649c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17800ad1-cdd1-4dc4-97c1-92875ba2ea76",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19e4857a-4280-45a9-abb0-71e75b3d8586",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05d51919-8f21-4f2b-9763-2a1aa84a8dea",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "646a2950-4164-48b2-9b8b-9a9b5a9b21d0",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Assassination",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}